[FEATURE] Add permission middleware - Add CheckPermissionMiddleware - Add permission into jwt payload - Refactor redux
