# laravel/app/Models/ModelsRoles.php
@@ -5,8 +5,7 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 
-class ModelsRoles extends Model
-{
+class ModelsRoles extends Model {
     use HasFactory;
     protected $table = "roles";
     protected $fillable = [
@@ -18,7 +17,11 @@ class ModelsRoles extends Model
         "updated_at",
     ];
 
-    public function users(){
-        return $this->hasMany(ModelsUsers::class,"role_id","id");
+    public function users() {
+        return $this->hasMany(ModelsUsers::class, "role_id", "id");
+    }
+
+    public function permissions() {
+        return $this->belongsToMany(ModelsPermissions::class, "roles_has_permissions", "role_id", "permission_id");
     }
 }
